--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
-django
-djangorestframework
-django-cors-headers
-deep-translator
-ollama
-requests
+annotated-types==0.7.0
+anyio==4.12.1
+asgiref==3.11.1
+beautifulsoup4==4.14.3
+certifi==2026.2.25
+charset-normalizer==3.4.4
+deep-translator==1.11.4
+dj-database-url==3.1.2
+Django==6.0.2
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+gunicorn==25.1.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+ollama==0.6.1
+packaging==26.0
+psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic_core==2.41.5
+python-decouple==3.8
+razorpay==2.0.0
+requests==2.32.5
+soupsieve==2.8.3
+sqlparse==0.5.5
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
